@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members

package "pumlFromJava"
{
    class PumlDoclet
    {
        name
        asArg
        description
        parameters
        dca
        out
        d
    }
    class Java2Puml
    {
    }

    class PumlDiagram
    {
        file
    }

    class CreateFirstElement
    {
        builduml
    }

    class CreateExtendsElement
    {
        objectClass
        isExtends
        nameExtends
    }

    class Helper
    {
    }

    class CreateInterElement extends ElementDefault
    {
        methods
        impleElement
    }

    class CreateClassElement
    {
        fields
        constructors
        methods
        extendsElement
        impleElement
    }

    class CreateFieldElement
    {
        isPrimitive
        modifier
        fieldSpecialElement
    }

    abstract class ElementDefault
    {
        element
        name
        enclosing
    }

    class CreateEnumElement
    {
        AttributEnum
    }

    class CreateImpleElement {
        typeElement
        isImplements
        interfacesImplements
    }

    class CreateFieldSpecialElement
    {
        elementFirst
        elementSecond
        elementSecondIsArray
    }

    class CreateConstructorElement
    {
        modifiers
        annotationMirrors
        executableElement

    }

    class CreateMethodElement
    {
        modifiers
        annotationMirrors
        executableElement
    }

    jdk.javadoc.doclet.Doclet <|.. PumlDoclet
    ElementDefault <|-- CreateClassElement
    ElementDefault <|-- CreateFieldElement
    ElementDefault <|-- CreateEnumElement
    ElementDefault <|-- CreateFirstElement
    ElementDefault <|-- CreateFieldSpecialElement
    PumlDoclet --> PumlDiagram : "Create"
    PumlDoclet --> CreateFirstElement : "Instantiate"
    CreateClassElement --> CreateConstructorElement : "Instantiate"
    CreateFirstElement --> CreateClassElement : "Instantiate"
    CreateFirstElement --> CreateEnumElement : "Instantiate"
    CreateClassElement --> CreateExtendsElement : "Instantiate"
    CreateFieldElement --> CreateFieldSpecialElement : "Instantiate"
    CreateClassElement --> CreateFieldElement : "Instantiate"
    CreateClassElement --> CreateImpleElement : "Instantiate"
    CreateInterElement --> CreateImpleElement : "Instantiate"

    CreateFirstElement --> CreateInterElement : "Instantiate"
    CreateClassElement --> CreateMethodElement: "Instantiate"
    CreateInterElement --> CreateMethodElement : "Instantiate"



}

note "Launch javadoc to PumlDoclet with args" as N2
Java2Puml .. N2
N2 .. PumlDoclet

@enduml